[package]
name = "hush"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
